--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Flask==3.0.0
+Flask==3.0.3
 Flask-SQLAlchemy==3.1.1
+Flask-Login==0.6.3
+Flask-SocketIO==5.3.6
 Flask-Mail==0.9.1
-gunicorn==21.2.0
-pymysql==1.1.0
-Flask-SocketIO==5.3.4
-Flask-Login
-psycopg2-binary
-eventlet==0.36.1          # Needed for SocketIO async workers
-python-dotenv==1.0.1        # Optional, for local env var management
+psycopg2-binary==2.9.9
+eventlet==0.36.1
+gunicorn==20.1.0
+python-dotenv==1.0.1
+       # Optional, for local env var management
 
